Increased size of partner/associate names in project list. Fixed spacing for associate conditional rendering

--- a/public/style.css
+++ b/public/style.css
@@ -97,3 +97,8 @@ margin: 10% auto;
 .bartext {
 	color: white;
 }
+
+.lawyer{
+	font-size: 1.1em;
+	font-weight:600;
+}
